--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Yas_!_ru's Website</title>
+    <title>Yasiru's Website</title>
     <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
 
     <!-- Metadata -->
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Yas_!_ru's Website" />
+    <meta property="og:site_name" content="Yasiru's Website" />
 
     <!-- Stylesheets -->
     <link
@@ -41,8 +41,8 @@
     <header>
         <div class="tile">
             <h1>
-                Yas_!_ru's Website
-                <p>Hello I'm Yas, I like to code as a hobby and this is my website.</p>
+                Yasiru's Website
+                <p>Programming & Tech enthusiast, Professional bug developer.</p>
             </h1>
         </div>
     </header>
@@ -67,12 +67,10 @@
                 <div id="about-me" class="lgt-card">
                     <h2>About me</h2>
                     <div class="profile-pic">
-                        <img src="./assets/images/profile-picture.jpg">
+                        <img src="./assets/images/profile-picture.jpg" alt="Profile Picture">
                     </div>
-                    <p text-align="left">
-                        I'm a 17 year old freelance developer, studying for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
-                        <br><br>I started programming with the pandemic, after meeting another developer who got my interests sparked.
-                        Since then I've been coding a lot, mostly in Python and JavaScript.
+                    <p text-align="center">
+                        Hello, I'm a student living in Sri Lanka studying at Trinity College Kandy for my GCE ALs. I develope things as a hobby and as a side gig.
                     </p>
                 </div>
 
@@ -82,7 +80,7 @@
                         <a title="Email"     href="mailto:yasiru.dharmathilaka@gmail.com"><i class="fas fa-at"></i><label>Email</label></a>
 
                         <a target="_" title="Github"            href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a target="_" title="Open in Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
+                        <a target="_" title="Open in Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yasiru#9999</label></a>
                         <a target="_" title="Instagram"         href="https://www.instagram.com/ayo.its.yas/" style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i class="fab fa-instagram"></i><label>ayo.its.yas</label></a>
                         <a target="_" title="Twitter"           href="https://twitter.com/CallMeYasiru" style="background: linear-gradient(to right, #75c3f3, #109bf2)"><i class="fab fa-twitter"></i><label>Twitter</label></a>
                     </div>
@@ -163,9 +161,7 @@
                         </tr>
                         <tr>
                             <td><a href="https://www.xpanse.live" target="_blank">Xpanse 22</a></td>
-                            <td>
-                                Website showcasing the project "Xpanse" organized by Trinity College Media Unit.
-                            </td>
+                            <td>Website for project "Xpanse" organized by <a href="https://trinitycollege.lk/portfolio/media-unit/" target="_blank">Trinity College Media Unit.</a></td>
                         </tr>
                     </table>
                 </div>
@@ -186,29 +182,14 @@
                         <tr>
                             <td>Developing Discord bots</td>
                             <td>
-                                <ul>
-                                    <li>
-                                        A discord bot to do anything that can be done on discord, just the way you want it to.
-                                    </li>
-                                    <li>
-                                        I can get anything done for you from the list below and if it's not there let me know.
-                                        <ul>
-                                            <li>Giveaways</li>
-                                            <li>Moderation</li>
-                                            <li>Music</li>
-                                            <li>Leveling</li>
-                                            <li>Welcome messages</li>
-                                            <li>Registration forms</li>
-                                            <li>Auto roles</li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                                Discord is a goood platform for any sort of community, and discord bots can pretty much do anything
+                                on the platform. I can get anything working from a bot that can do simple day to day tasks on discord,
+                                chat moderation or pretty much any task as long as the platform supports it.
                             </td>
                         </tr>
                         <tr>
                             <td>Developing Websites</td>
                             <td>
-
                                 I ensure you that the final product will look and function just the way you want it to.
                                 I will revise and rework it till you are 100% satisfied in accordance with the design.
                                 <hr />
@@ -302,7 +283,7 @@
     </main>
 
     <footer>
-        <p>This website was built & designed by Yas_!_ru. Source available on <a href="https://github.com/ItsYasiru/ItsYasiru">github</a>, hosted on github pages.</p>
+        <p>Source available on <a href="https://github.com/ItsYasiru/ItsYasiru">github</a>, hosted on github pages.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
